--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"bootstrap": "^5.2.0-beta1"
+		"bootstrap": "^5.2.0-beta1",
+		"sqlite3": "^5.0.8",
+		"uuid": "^8.3.2"
 	}
 }
